--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-spinner": "^0.2.7",
     "react-spinners": "^0.15.0"
   },
   "scripts": {
