--- a/vizsga_backend/vizsga_backend.csproj
+++ b/vizsga_backend/vizsga_backend.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="MimeKit" Version="4.10.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
