--- a/vizsga_backend/appsettings.json
+++ b/vizsga_backend/appsettings.json
@@ -11,8 +11,11 @@
   },
   "EmailSettings": {
     "EmailHost": "smtp.gmail.com",
-    "EmailUserName": "best.albigo@gmail.com",
-    "EmailPassword": "kchl kzfm borh ltvx"
+    "SmtpPort": 587,
+    "SmtpUsername": "best.albigoo@gmail.com",
+    "SmtpPassword": "ngni fehd zkyp mwbc",
+    "FromAddress": "best.albigoo@gmail.com",
+    "FromName": "AlbiGo"
   },
   "AuthSettings": {
     "JwtOptions": {
