A regisztráció után emilt küld

--- a/vizsga_backend/appsettings.json
+++ b/vizsga_backend/appsettings.json
@@ -10,12 +10,14 @@
 
   },
   "EmailSettings": {
-    "EmailHost": "smtp.gmail.com",
+    "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
     "SmtpUsername": "best.albigoo@gmail.com",
     "SmtpPassword": "ngni fehd zkyp mwbc",
+    "FromName": "AlbiGo",
     "FromAddress": "best.albigoo@gmail.com",
-    "FromName": "AlbiGo"
+    "EnableSsl": true
+
   },
   "AuthSettings": {
     "JwtOptions": {
